--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,39 @@
 {
   "manifest_version": 3,
   "name": "Browser Vigilant",
-  "version": "1.0",
-  "description": "A Chrome Extension that detects and blocks phishing/scam websites in real time using a locally running Machine Learning model.",
+  "version": "2.0.0",
+  "description": "Multi-layer cybersecurity shield: phishing detection, UPI fraud prevention, malicious file blocking, and DOM credential-harvesting detection — all 100% on-device.",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage",
+    "downloads",
+    "notifications",
+    "tabs",
+    "webNavigation",
+    "declarativeNetRequest",
+    "alarms"
   ],
   "host_permissions": [
     "<all_urls>"
   ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "action": {
+    "default_popup": "popup/index.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "content_scripts": [
     {
       "matches": [
@@ -22,7 +46,8 @@
       "css": [
         "style.css"
       ],
-      "run_at": "document_idle"
+      "run_at": "document_start",
+      "all_frames": false
     }
   ],
   "web_accessible_resources": [
@@ -31,11 +56,16 @@
         "model/model.onnx",
         "wasm-build/*",
         "ort-wasm.wasm",
-        "ort-wasm-simd.wasm"
+        "ort-wasm-simd.wasm",
+        "block.html",
+        "icons/*"
       ],
       "matches": [
         "<all_urls>"
       ]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; connect-src 'self'"
+  }
 }
