--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -1,4 +1,7 @@
-scikit-learn
-onnxruntime
-skl2onnx
-numpy
+scikit-learn==1.4.2
+skl2onnx==1.17.0
+onnx==1.16.0
+numpy==1.26.4
+pandas==2.2.2
+onnxruntime==1.18.0
+tqdm==4.66.4
