--- a/wasm-feature/Cargo.toml
+++ b/wasm-feature/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-feature"
-version = "0.1.0"
+version = "2.0.0"
 edition = "2021"
 
 [lib]
@@ -8,4 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-js-sys = "0.3"
+
+[profile.release]
+opt-level = "s"
+lto = true
