--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Browser Vigilant",
   "version": "2.0.0",
-  "description": "Multi-layer cybersecurity shield: phishing detection, UPI fraud prevention, malicious file blocking, and DOM credential-harvesting detection — all 100% on-device.",
+  "description": "Multi-layer AI cybersecurity shield: phishing detection, UPI fraud prevention, malicious file blocking, and DOM credential-harvesting detection. 100% on-device.",
   "permissions": [
     "activeTab",
     "scripting",
@@ -11,7 +11,6 @@
     "notifications",
     "tabs",
     "webNavigation",
-    "declarativeNetRequest",
     "alarms"
   ],
   "host_permissions": [
@@ -22,7 +21,7 @@
     "type": "module"
   },
   "action": {
-    "default_popup": "popup/index.html",
+    "default_popup": "dist-popup/index.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
@@ -37,7 +36,8 @@
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "http://*/*",
+        "https://*/*"
       ],
       "js": [
         "ort.min.js",
@@ -66,6 +66,6 @@
     }
   ],
   "content_security_policy": {
-    "extension_pages": "default-src 'self'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; connect-src 'self'"
+    "extension_pages": "default-src 'self'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self'"
   }
 }
