--- a/popup/package.json
+++ b/popup/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@types/chrome": "^0.1.36",
     "svelte": "^5.45.2",
     "vite": "^7.3.1"
   }
